--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:14-alpine
 WORKDIR /app-backend 
 EXPOSE 3001
-COPY . .
+COPY package* ./
 RUN npm install
-ENTRYPOINT [ "npm" ]
+COPY . .
+ENTRYPOINT [ "npm", "run" ]
 CMD [ "start" ]
